# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2018-05-30 Michael Truog   <mjtruog at protonmail dot com>

    * Fix the function order in the cloudi_service_api module
      so it matches the API documentation

2018-05-29 Michael Truog   <mjtruog at protonmail dot com>

    * Modified the CloudI Service API function services_status output
      to retain downtime for smaller time periods after past downtime
      even if there is no recent downtime
      (at least 3 time periods remain visible)

2018-05-28 Michael Truog   <mjtruog at protonmail dot com>

    * Fixed the CloudI Service API function services_status output
      related to the availability of the total uptime

2018-05-26 Michael Truog   <mjtruog at protonmail dot com>

    * Add the total availability to the CloudI Service API function
      services_status by only excluding the restarting time during each
      time period
    * Make the CloudI Service API function services_status return format
      more minimal based on the values currently available
    * Fix the CloudI Service API function services_status interrupt
      due to updating so it properly considers the availability time period
    * In the CloudI Service API function services_status output,
      use the term "interrupt" instead of "downtime" for the amount
      of time spent updating, since that is more correct
      (processing queued messages is paused during the update)

2018-05-25 Michael Truog   <mjtruog at protonmail dot com>

    * Allow the CloudI Service API function services_status to return
      all service status information when an empty list is used
    * Add the downtime spent restarting and updating to the
      CloudI Service API function services_status

2018-05-22 Michael Truog   <mjtruog at protonmail dot com>

    * Fix bug with CloudI Service API function services_update that
      prevented the command-line argument from being updated for its